# hkfilings-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
assets/: README.md
examples/: 01_quickstart.py  02_compare_gross_margin_baba_vs_tencent.py  03_signals_and_supply_chain.py  README.md
hkfilings/: __init__.py  _version.py  client.py  types.py
tests/: conftest.py  test_client_init.py  test_errors.py  test_layer1.py  test_layer2.py  test_review.py  test_schema.py  test_types.py
