[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hkfilings"
description = "Python SDK for the HKFilings API — parse HKEX annual / interim PDFs into source-traced financial facts, industry signals and supply-chain graphs."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "HKFilings.app"},
]
maintainers = [
    {name = "HKFilings.app"},
]
keywords = [
    "hkex",
    "hong-kong",
    "hk-stock",
    "annual-report",
    "interim-report",
    "financial-statements",
    "fundamental-analysis",
    "pdf-parsing",
    "investor-relations",
    "equity-research",
    "fintech",
    "sdk",
    "财报",
    "港股",
    "年报",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
]
dynamic = ["version"]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.6",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]

[project.urls]
Homepage = "https://hkfilings.app"
Documentation = "https://docs.hkfilings.app/python"
Repository = "https://github.com/mylovelycodes/hkfilings-python"
Issues = "https://github.com/mylovelycodes/hkfilings-python/issues"
Changelog = "https://github.com/mylovelycodes/hkfilings-python/blob/main/CHANGELOG.md"
"Get an API key" = "https://hkfilings.app/signup"

[tool.setuptools.dynamic]
version = {attr = "hkfilings._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["hkfilings*"]

[tool.setuptools.package-data]
hkfilings = ["py.typed"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=hkfilings",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["hkfilings"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true

# ---------------------------------------------------------------------------
# ruff (lint + format)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "TID",  # tidy-imports
]
ignore = [
    "E501",   # line length — handled by formatter
    "RUF001", # ambiguous unicode chars in strings (we use × and – on purpose)
    "RUF002", # ambiguous unicode chars in docstrings
    "RUF022", # __all__ sorting — we group semantically (e.g. Layer 1 then Layer 2)
    "SIM117", # nested with — explicit nesting is sometimes clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM117"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
